welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:4: error: identifier expected but 'for' found.
	for (j<-0 to 2){
        ^